<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/ks_match_start_text"
            style="@style/player_name_style"
            android:layout_weight="1"
            android:layout_marginEnd="72dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:id="@+id/teamdropdown"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/ks_hometeam_hint">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/away_team_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/ks_awayteam_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/ks_date_text"
            android:id="@+id/date_input"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ks_current_players_text"
                style="@style/player_name_style">

            </TextView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:iconSize="30dp"
                app:icon="@drawable/add_icon"
                style="@style/add_button_style"
                android:layout_gravity="center"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


        <ListView
            android:id="@+id/players_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackgroundSecond"
            android:listSelector="@color/colorAccent"
            android:layout_marginBottom="12dp">
        </ListView>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ks_back_button_text"
                android:id="@+id/back_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_alignParentStart="true"
                style="@style/back_button_style"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ks_continue_button_text"
                android:id="@+id/continue_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>